--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img src="./img/2.png" width="200" alt="">
           <h1>SUNRISE LOUNGE<br>Приветсвует тебя! </h1>
           <h2>Залетай к нам на покур в лучшей обстановке и с лучшими людьми. Мы уже ждём тебя)</h2>
-          <a class="main-bg-begin bounce-in-top" href="drink.html">Chill out</a>
+          <a class="main-bg-begin bounce-in-top" href="drink.html">Меню</a>
           <ul>
             <li>
               <div>
@@ -63,6 +63,18 @@
                 </h3>
               </div>
             </li>
+
+            <li>
+              <div>
+                <span>VK</span>
+              </div>
+              <div>
+                <h3>
+                  <a href="https://vk.com/public210984430">sunrise__lounge</a>
+                </h3>
+              </div>
+            </li>
+
           </ul>
         </div>
       </div>
