--- a/drink.html
+++ b/drink.html
@@ -40,14 +40,14 @@
             <!--  -->
             <li class="menu__item">
               <ul class="menu__sub-list">
-                <li class="menu__sub-item">
 
+                <li class="menu__sub-item">
                   <div class="menu__item-wrap">
                     <div class="menu__item-title-wrap">
                       <div class="menu__item-title">Лёгкие </div>
                     </div>
                     <div class="menu__item-price">
-                      <span class="menu__rub">500<span></span></span>
+                      <span class="menu__rub">550<span></span></span>
                     </div>
                   </div>
                 </li>
@@ -56,7 +56,6 @@
                   <div class="menu__item-wrap">
                     <div class="menu__item-title-wrap">
                       <div class="menu__item-title">Средние </div>
-                      <div class="menu__item-title">Крепкие </div>
                     </div>
                     <div class="menu__item-price">
                       <span class="menu__rub">600<span></span></span>
@@ -68,10 +67,22 @@
                 <li class="menu__sub-item">
                   <div class="menu__item-wrap">
                     <div class="menu__item-title-wrap">
+                      <div class="menu__item-title">Крепкие </div>
+                    </div>
+                    <div class="menu__item-price">
+                      <span class="menu__rub">650<span></span></span>
+                    </div>
+                  </div>
+                </li>
+
+
+                <li class="menu__sub-item">
+                  <div class="menu__item-wrap">
+                    <div class="menu__item-title-wrap">
                       <div class="menu__item-title">Очень крепкие </div>
                     </div>
                     <div class="menu__item-price">
-                      <span class="menu__rub">700<span></span></span>
+                      <span class="menu__rub">1000<span></span></span>
                     </div>
                   </div>
                 </li>
@@ -92,7 +103,7 @@
                       <div class="menu__item-title">Ананас на один калауд </div>
                     </div>
                     <div class="menu__item-price">
-                      <span class="menu__rub">500<span></span></span>
+                      <span class="menu__rub">250<span></span></span>
                     </div>
                   </div>
                 </li>
@@ -103,7 +114,7 @@
                       <div class="menu__item-title">Ананас на два калауда </div>
                     </div>
                     <div class="menu__item-price">
-                      <span class="menu__rub">800<span></span></span>
+                      <span class="menu__rub">500<span></span></span>
                     </div>
                   </div>
                 </li>
@@ -116,7 +127,7 @@
                       <div class="menu__item-title">Яблоко </div>
                     </div>
                     <div class="menu__item-price">
-                      <span class="menu__rub">300<span></span></span>
+                      <span class="menu__rub">100<span></span></span>
                     </div>
                   </div>
                 </li>
@@ -127,7 +138,7 @@
                       <div class="menu__item-title">Грейпфрут</div>
                     </div>
                     <div class="menu__item-price">
-                      <span class="menu__rub">350<span></span></span>
+                      <span class="menu__rub">150<span></span></span>
                     </div>
                   </div>
                 </li>
@@ -158,6 +169,9 @@
           <h2>чай</h2>
           <ul class="menu__list">
             <!--  -->
+
+
+
             <li class="menu__item">
               <ul class="menu__sub-list">
                 <li class="menu__sub-item">
@@ -166,7 +180,6 @@
                     <div class="menu__item-title-wrap">
                       <div class="menu__item-title">Чёрный чай "Нувара Элия"</div>
                       <div class="menu__item-title">Зелёный чай "Чун Ми"</div>
-                      <div class="menu__item-title">Те Гуань Инь</div>
                     </div>
                     <div class="menu__item-price">
                       <span class="menu__rub">250<span></span></span>
@@ -175,6 +188,25 @@
                 </li>
               </ul>
             </li>
+
+
+            <li class="menu__item">
+              <ul class="menu__sub-list">
+                <li class="menu__sub-item">
+                  <div class="menu__item-wrap">
+                    <div class="menu__item-title-wrap">
+                      <div class="menu__item-title">Те Гуань Инь</div>
+                    </div>
+                    <div class="menu__item-price">
+                      <span class="menu__rub">300<span></span></span>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </li>            
+
+
+
             <!--  -->
             <li class="menu__item">
               <ul class="menu__sub-list">
@@ -191,7 +223,7 @@
                       <div class="menu__item-title">Клюквенный</div>
                     </div>
                     <div class="menu__item-price">
-                      <span class="menu__rub">300<span></span></span>
+                      <span class="menu__rub">350<span></span></span>
                     </div>
                   </div>
                 </li>
@@ -241,7 +273,7 @@
                       <div class="menu__item-title">американо</div>
                     </div>
                     <div class="menu__item-price">
-                      <span class="menu__rub">50<span></span></span>
+                      <span class="menu__rub">80<span></span></span>
                     </div>
                   </div>
                 </li>
@@ -256,7 +288,7 @@
                       <div class="menu__item-title">американо с молоком</div>
                     </div>
                     <div class="menu__item-price">
-                      <span class="menu__rub">60<span></span></span>
+                      <span class="menu__rub">100<span></span></span>
                     </div>
                   </div>
                 </li>
@@ -269,20 +301,22 @@
                   <div class="menu__item-wrap">
                     <div class="menu__item-title-wrap">
                       <div class="menu__item-title">Капучино</div>
+                      <div class="menu__item-title">Латте</div>                      
                     </div>
                     <div class="menu__item-price">
-                      <span class="menu__rub">80<span></span></span>
+                      <span class="menu__rub">120<span></span></span>
                     </div>
                   </div>
                 </li>
               </ul>
             </li>
+
             <li class="menu__item">
               <ul class="menu__sub-list">
                 <li class="menu__sub-item">
                   <div class="menu__item-wrap">
                     <div class="menu__item-title-wrap">
-                      <div class="menu__item-title">Латте</div>
+
                       <div class="menu__item-title">Nesquik</div>
                     </div>
                     <div class="menu__item-price">
@@ -292,6 +326,9 @@
                 </li>
               </ul>
             </li>
+
+
+
             <!--  -->
           </ul>
         </section>
@@ -322,7 +359,7 @@
                       <div class="menu__item-title">Напитки в Ассортименте</div>
                     </div>
                     <div class="menu__item-price">
-                      <span class="menu__rub">100<span></span></span>
+                      <span class="menu__rub">130<span></span></span>
                     </div>
                   </div>
                 </li>
