--- a/drink.html
+++ b/drink.html
@@ -244,7 +244,7 @@
                     <div class="menu__item-title-wrap">
                       <div class="menu__item-title">Сладкая Лиса</div>
                       <div class="menu__item-title">Love Is</div>
-                      <div class="menu__item-title">Кдассическое Мохито</div>
+                      <div class="menu__item-title">Классическое Мохито</div>
                       <div class="menu__item-title">Энергетик Адама</div>
                       <div class="menu__item-title">Секс в Кальянной</div>
                       <div class="menu__item-title">Кофейный Nesquik</div>
